--- a/ChatPrjTest/src/main/resources/static/css/style.css
+++ b/ChatPrjTest/src/main/resources/static/css/style.css
@@ -6,7 +6,7 @@
 }
 
 .container{
-	width: 500px;
+	width: 700px;
 	margin: 0 auto;
 	padding: 25px;	
 }
@@ -39,4 +39,62 @@ input{
 
 #yourMessage{
 	display: none;
+}
+
+.roomContainer{
+	background-color: #F6F6F6;
+	width: 500px;
+	height: 500px;
+	overflow: auto;
+}
+
+.roomList{
+	border: none;
+	width: inherit;
+}
+
+.roomList th{
+	border: 1px solid #FFBB00;
+	background-color: #fff;
+	color: #FFBB00;
+}
+
+.roomList td{
+	border: 1px solid #FFBB00;
+	background-color: #fff;
+	text-align: left;
+	color: #FFBB00;
+}
+
+.roomList .num{
+	width: 70px;
+	text-align: center;
+}
+
+.roomList .room{
+	width: 350px;
+}
+
+.roomList .go{
+	width: 71px;
+	text-align: center;
+}
+
+button {
+	background-color: #FFBB00;
+	font-size: 14px;
+	color: #000;
+	border: 1px solid #000;
+	border-radius: 5px;
+	padding: 3px;
+	margin: 3px;
+}
+
+.inputTable th {
+	padding: 5px;
+}
+
+.inputTable input {
+	width: 330px;
+	height: 25px;
 }
